--- a/tests/parsing/scripts/modifiers.yaml
+++ b/tests/parsing/scripts/modifiers.yaml
@@ -10,62 +10,82 @@ tests:
   - script: 'name<-:[]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: []
       definition: []
   - script: 'name<-[]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: []
       definition: []
   - script: 'name<-:[]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: []
       definition: []
   - script: 'name <- : 1'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: []
       definition: [1]
   - script: 'name<-:1d6'
     result:
       _class: ModifierDef
-      target: name
+      target:
+        _class: Reference
+        value: name
       parameters: []
       definition:
-      - _class: Dice
+      - _class: DiceNode
         number_of_dice: 1
         sides: 6
   - script: 'name<-param[]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: ['param']
       definition: []
   - script: 'name<-param:[]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: ['param']
       definition: []
   - script: 'name<-param1: 1 + a'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: ['param1']
       definition:
       - _class: BinaryOp
         left: 1
         op: '+'
-        right: a
+        right:
+          _class: Reference
+          value: a
   - script: 'name<-param1: ? + 2'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters: ['param1']
       definition:
       - _class: BinaryOp
@@ -77,31 +97,45 @@ tests:
   - script: 'name<-param1, param2: param1 + param2'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters:
       - 'param1'
       - 'param2'
       definition:
       - _class: BinaryOp
-        left: 'param1'
+        left:
+          _class: Reference
+          value: 'param1'
         op: '+'
-        right: 'param2'
+        right:
+          _class: Reference
+          value: 'param2'
   - script: 'name<-param1, param2 [param1 + param2]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters:
       - 'param1'
       - 'param2'
       definition:
       - _class: BinaryOp
-        left: 'param1'
+        left:
+          _class: Reference
+          value: 'param1'
         op: '+'
-        right: 'param2'
+        right:
+          _class: Reference
+          value: 'param2'
   - script: 'name<-param1, param2 [ ?.{1} = 3 ]'
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters:
       - 'param1'
       - 'param2'
@@ -123,15 +157,21 @@ tests:
       ]
     result:
       _class: ModifierDef
-      target: 'name'
+      target:
+        _class: Reference
+        value: 'name'
       parameters:
       - 'param1'
       - 'param2'
       definition:
       - _class: BinaryOp
-        left: 'param1'
+        left:
+          _class: Reference
+          value: 'param1'
         op: '+'
-        right: 'param2'
+        right:
+          _class: Reference
+          value: 'param2'
       - _class: Assignment
         target:
           _class: Access
@@ -154,100 +194,123 @@ tests:
         _class: SpecialReference
         value: 'SUBJECT'
       modifiers:
-      - modifier: 'top'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'top'
         args: []
-        _class: ModifierCall
   - script: 'test->top(2)'
     result:
       _class: Modify
-      subject: 'test'
+      subject:
+        _class: Reference
+        value: 'test'
       modifiers:
-      - modifier: 'top'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'top'
         args: [2]
   - script: '1d6->bottom'
     result:
       _class: Modify
       subject:
-        _class: Dice
+        _class: DiceNode
         number_of_dice: 1
         sides: 6
       modifiers:
-      - modifier: 'bottom'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'bottom'
         args: []
-        _class: ModifierCall
   - script: '1d6->bottom(2d3)'
     result:
       _class: Modify
       subject:
-        _class: Dice
+        _class: DiceNode
         number_of_dice: 1
         sides: 6
       modifiers:
-      - modifier: 'bottom'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'bottom'
         args:
         - number_of_dice: 2
           sides: 3
-        _class: ModifierCall
   - script: '1d6->bottom(2d3)->top'
     result:
       _class: Modify
       subject:
-        _class: Dice
+        _class: DiceNode
         number_of_dice: 1
         sides: 6
       modifiers:
-      - modifier: 'bottom'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'bottom'
         args:
         - number_of_dice: 2
-          _class: Dice
+          _class: DiceNode
           sides: 3
-        _class: ModifierCall
-      - modifier: 'top'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'top'
         args: []
-        _class: ModifierCall
   - script: '1d6->bottom(2d3)->top(1)'
     result:
       _class: Modify
       subject:
-        _class: Dice
+        _class: DiceNode
         number_of_dice: 1
         sides: 6
       modifiers:
-      - modifier: 'bottom'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'bottom'
         args:
         - number_of_dice: 2
           sides: 3
-          _class: Dice
-        _class: ModifierCall
-      - modifier: 'top'
+          _class: DiceNode
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'top'
         args: [1]
-        _class: ModifierCall
   - script: '1d6->bottom(2d3)->top(1, 4d5 - 6, 7)'
     result:
       _class: Modify
       subject:
-        _class: Dice
+        _class: DiceNode
         number_of_dice: 1
         sides: 6
       modifiers:
-      - modifier: 'bottom'
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'bottom'
         args:
         - number_of_dice: 2
           sides: 3
-          _class: Dice
-        _class: ModifierCall
-      - modifier: 'top'
+          _class: DiceNode
+      - _class: ModifierCall
+        modifier:
+          _class: Reference
+          value: 'top'
         args:
         - 1
         - left:
             number_of_dice: 4
             sides: 5
-            _class: Dice
+            _class: DiceNode
           op: '-'
           right: 6
           _class: BinaryOp
         - 7
-        _class: ModifierCall
 
 - name: leave
   categories:
